get request for login
still working on get request for the verfication portion of the login on ejs file

--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -44,7 +44,7 @@
                 <div class="col">
                   <div class="form-group">
                     <label for="validationFName" class="h6">Student Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="example@school.edu">
+                    <input name="verifyEmail" type="email" class="form-control" id="email" placeholder="example@school.edu">
                     <span class="error"><small id="emailError" style="color:red"></small></span>
                   </div>
                 </div>
@@ -90,4 +90,3 @@
         </div>
       </body>
     </html>
-          
