--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -40,11 +40,11 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form onsubmit="return(formDone());" name="regForm" id="regForm" >
+              <form action="/Login/verify" name="regForm" id="regForm" >
                 <div class="col">
                   <div class="form-group">
                     <label for="validationFName" class="h6">Student Email</label>
-                    <input name="verifyEmail" type="email" class="form-control" id="email" placeholder="example@school.edu">
+                    <input name="verifyEmail" type="input" class="form-control" id="email" placeholder="example@school.edu">
                     <span class="error"><small id="emailError" style="color:red"></small></span>
                   </div>
                 </div>
