--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
       <head>
-        <title>Login Page</title>
+        <title>login Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -40,7 +40,7 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form action="/Login/verify" name="regForm" id="regForm" >
+              <form action="/login/verify" name="regForm" id="regForm" >
                 <div class="col">
                   <div class="form-group">
                     <label for="validationFName" class="h6">Student Email</label>
