--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -40,7 +40,7 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form action="/login/verify" name="regForm" id="regForm" >
+              <form action="/login/verify" method="POST" name="regForm" id="regForm" >
                 <div class="col">
                   <div class="form-group">
                     <label for="validationFName" class="h6">Student Email</label>
