--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script src="regPage.js"></script>
+        <script src="../../regPage.js"></script>
         <style>
           .topnav{
             background-color: #C7BA7C;
@@ -51,7 +51,7 @@
                 <div class="col">
                   <div class="form-group">
                     <label for="validationLName" class="h6">Password</label>
-                    <input type ="password" class="form-control" id="lName" placeholder="Password">
+                    <input type ="password" class="form-control" id="lName" placeholder="Password" value= ''>
                     <span class="error"><small id="passError" style="color:red"></small></span>
                   </div>
                 </div>
@@ -78,6 +78,9 @@
                 <div class="mt-2">
                  <center>
                   <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
+                  <script> var pass = document.getElementById('lName').value; </script>
+
+
                   <a class="btn btn-lg btn-dark" href="regPage.html">Register</a>
                  </center>
                 </div>
