--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -8,7 +8,7 @@
     		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script src="regPage.js"></script>
+        <script src="../../regPage.js"></script>
         <style>
           .topnav{
             background-color: #C7BA7C;
@@ -40,26 +40,26 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form onsubmit="return(formDone());" name="regForm" id="regForm" >
+              <form action="/regPage/valid" method="POST" onsubmit="return(formDone());" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
                       <label for="validationFName" class="h6">First Name</label>
-                      <input class="form-control" id="fName" placeholder="First Name">
+                      <input name="fName" class="form-control" id="fName" placeholder="First Name">
                       <span class="error"><small id="fNameError" style="color:red"></small></span>
                     </div>
                   </div>
                   <div class="col">
                     <div class="form-group">
                       <label for="validationLName" class="h6">Last Name</label>
-                      <input class="form-control" id="lName" placeholder="Last Name">
+                      <input name= "lName" class="form-control" id="lName" placeholder="Last Name">
                       <span><small id="lNameError" style="color:red"></small></span>
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="validationSchool" class="h6">School</label>
-                  <select class="form-control" id="schoolSelect">
+                  <select name="school" class="form-control" id="schoolSelect">
                     <option value="">Select a School</option>
                     <option value="CU - Boulder">CU - Boulder</option>
                     <option value="UT - Arlington">UT - Arlington</option>
@@ -68,18 +68,18 @@
                 </div>
                 <p class="h6">Select Role</p>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="studentStatus" value="None">
+                  <input name="studentStatus" class="form-check-input" type="checkbox" id="studentStatus" value="None">
                   <label class="form-check-label" for="student">Student</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus">
+                  <input name="tutorStatus" class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus">
                   <label class="form-check-label" for="tutorCheck">Tutor</label>
                 </div>
                 <span class="error"><small id="typeStatus" style="color:red"></small></span>
                 <div class="card card-body" style="display:none;" id="tutorCard">
                   <div class="form-group" id="tutorForm">
                     <label for="validationSchool" class="h6">What Year Are You?</label>
-                    <select class="form-control" id="yearStatus">
+                    <select name="yearStatus" class="form-control" id="yearStatus">
                       <option value="">Select a Year</option>
                       <option value="Freshman">Freshman</option>
                       <option value="Sophomore">Sophomore</option>
@@ -90,7 +90,7 @@
                   </div>
                   <div class="form-group">
                     <label for="validationSubject" class="h6">What Subject?</label>
-                    <select class="form-control" id="subjectStatus">
+                    <select name="subjectStatus" class="form-control" id="subjectStatus">
                       <option value="">Select a Subject</option>
                       <option value="Math">Math</option>
                       <option value="Physics">Physics</option>
@@ -104,14 +104,15 @@
                 <br>
                 <div class="form-group">
                   <label for="emailAddress" class="h6">Student E-mail</label>
-                  <input type="email" class="form-control" id="email" placeholder="example@school.edu">
+                  <input name="email" type="email" class="form-control" id="email" placeholder="example@school.edu">
                   <span class="error"><small id="emailError" style="color:red"></small></span>
                 </div>
                 <div class="form-group">
                   <label for="pWord" class="h6">Password</label>
-                  <input type="password" class="form-control" id="password" placeholder="Password">
+                  <input name="password" type="password" class="form-control" id="password" placeholder="Password">
                   <small id="passwordHelpBlock" class="form-text text-muted">
                     Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+
                   </small>
                   <span class="error"><small id="passError" style="color:red"></small></span>
                 </div>
@@ -122,7 +123,11 @@
                 </div>
                 <br>
                 <div class="mt-3">
-                  <button type="submit" class="btn btn-dark btn-block">Submit</button>
+                  <button id="submit_button" type="submit" class="btn btn-dark btn-block"  >Submit</button>
+
+                </div>
+                <div class="mt-3">
+                  <center> <a class="btn btn-dark" href="LoginPage.html">Back To Login</a> </center>
                 </div>
               </form>
             </div>
