added connections btw pages that work
also created basic rendering of profile page waiting on kevin to implement holding the id from the login to render each portion.

--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -79,15 +79,12 @@
                  <center>
                   <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
                   <script> var pass = document.getElementById('lName').value; </script>
-
-
-                  <a class="btn btn-lg btn-dark" href="regPage.html">Register</a>
                  </center>
                 </div>
-                <div>
-                  <p></p>
-                </div>
               </form>
+              <div class= "mt-2">
+                <center><form action="/regPage" > <input class="btn btn-lg btn-dark" type="submit" value ="Register">  </form></center>
+              </div>
             </div>
           </div>
         </div>
