--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -126,10 +126,11 @@
                   <button id="submit_button" type="submit" class="btn btn-dark btn-block"  >Submit</button>
 
                 </div>
-                <div class="mt-3">
-                  <center> <a class="btn btn-dark" href="LoginPage.html">Back To Login</a> </center>
-                </div>
+
               </form>
+              <div class="mt-3">
+                 <form action="/login" > <input type="submit" value ="Go to Login">  </form>
+              </div>
             </div>
           </div>
         </div>
