--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -30,7 +30,7 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav">
-          <form action="/login" > <input type="submit" value ="Go to Login">  </form>
+          <form action="/" > <input type="submit" value ="Go to Login">  </form>
           <a class="active"href="#about">About</a>
         </div>
         <div class="container-fluid">
