--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -30,7 +30,9 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav">
-          <form action="/" > <input type="submit" value ="Go to Login">  </form>
+          <form action="/" > 
+            <a type="submit" >Home</a>  
+          </form>
           <a class="active"href="#about">About</a>
         </div>
         <div class="container-fluid">
@@ -124,13 +126,7 @@
                 <br>
                 <div class="mt-3">
                   <button id="submit_button" type="submit" class="btn btn-dark btn-block"  >Submit</button>
-
                 </div>
-
-              </form>
-              <div class="mt-3">
-                 <form action="/login" > <input type="submit" value ="Go to Login">  </form>
-              </div>
             </div>
           </div>
         </div>
