--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -22,7 +22,19 @@
             text-decoration: none;
             font-size: 17px;
           }
+          .topnav input{
+            float:left;
+            color:#000000;
+            text-align: center;
+            padding: 10px 14px;
+            text-decoration: none;
+            font-size: 17px;
+          }
           .topnav a:hover {
+            background-color: #CFbf5C;
+            color: black;
+          }
+          .topnav input:hover {
             background-color: #CFbf5C;
             color: black;
           }
@@ -30,8 +42,8 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav">
-          <form action="/" > 
-            <a type="submit" >Home</a>  
+          <form action="/">
+            <input type="submit" name="home" value="Home"> 
           </form>
           <a class="active"href="#about">About</a>
         </div>
