--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -26,11 +26,25 @@
             background-color: #CFbf5C;
             color: black;
           }
+          .topnav input{
+            float:left;
+            color:#000000;
+            text-align: center;
+            padding: 10px 14px;
+            text-decoration: none;
+            font-size: 17px;
+          }
+          .topnav input:hover {
+            background-color: #CFbf5C;
+            color: black;
+          }
       </style>
       </head>
       <body style="background-color:#000000">
         <div class="topnav">
-          <a class="active"href="LoginPage.html">Home</a>
+          <form action="/">
+            <input type="submit" name="home" value="Home"> 
+          </form>
           <a class="active"href="#about">About</a>
         </div>
         <div class="container-fluid">
