--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -93,7 +93,9 @@
                  <center>
                   <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
                   <script> var pass = document.getElementById('lName').value; </script>
-                  <form action="/regPage" > <input class="btn btn-lg btn-dark" type="submit" value ="Register"></form>
+                  <form action="/regPage">
+                    <input class="btn btn-lg btn-dark" type="submit" value ="Register">
+                  </form>
                  </center>
                 </div>
               </form>
