--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -93,12 +93,12 @@
                  <center>
                   <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
                   <script> var pass = document.getElementById('lName').value; </script>
-                  <form action="/regPage">
-                    <input class="btn btn-lg btn-dark" type="submit" value ="Register">
-                  </form>
                  </center>
                 </div>
               </form>
+              <div class= "mt-2">
+                <center><form action="/regPage" > <input class="btn btn-lg btn-dark" type="submit" value ="Register">  </form></center>
+              </div>
             </div>
           </div>
         </div>
