--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
       <head>
-        <title>login Page</title>
+        <title>Login Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -93,7 +93,7 @@
                  <center>
                   <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
                   <script> var pass = document.getElementById('lName').value; </script>
-                  <form action="/regPage" > <input class="btn btn-lg btn-dark" type="submit" value ="Register">  </form>
+                  <input class="btn btn-lg btn-dark" type="Register" value ="Register" formaction="/regPage">
                  </center>
                 </div>
               </form>
