--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -93,7 +93,7 @@
                  <center>
                   <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
                   <script> var pass = document.getElementById('lName').value; </script>
-                  <input class="btn btn-lg btn-dark" type="submit" value ="Register" formaction="/regPage">
+                  <button class="btn btn-lg btn-dark" type="submit" value ="Register" formaction="/regPage"></button>
                  </center>
                 </div>
               </form>
