--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -91,9 +91,9 @@
                 </center>
                 <div class="mt-2">
                  <center>
-                  <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
+                  <input class="btn btn-lg btn-dark" type="submit" value="Sign in"></input>
                   <script> var pass = document.getElementById('lName').value; </script>
-                  <button class="btn btn-lg btn-dark" type="submit" formaction="/regPage">Register</button>
+                  <input class="btn btn-lg btn-dark" type="submit" formaction="/regPage" value="Register"></input>
                  </center>
                 </div>
               </form>
