--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -93,7 +93,7 @@
                  <center>
                   <input class="btn btn-lg btn-dark" type="submit" value="Sign in"></input>
                   <script> var pass = document.getElementById('lName').value; </script>
-                  <input class="btn btn-lg btn-dark" type="submit" formaction="/regPage" value="Register"></input>
+                  <input class="btn btn-lg btn-dark" type="submit" formaction="/" value="Register"></input>
                  </center>
                 </div>
               </form>
