--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -93,7 +93,7 @@
                  <center>
                   <input class="btn btn-lg btn-dark" type="submit" value="Sign in"></input>
                   <script> var pass = document.getElementById('lName').value; </script>
-                  <form action="regPage" method="GET">
+                  <form action="/regPage" method="GET">
                     <input class="btn btn-lg btn-dark" type="submit" value="Register"></input>
                   </form>
                  </center>
