--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -92,8 +92,8 @@
                 <div class="mt-2">
                  <center>
                   <input class="btn btn-lg btn-dark" type="submit" value="Sign in"></input>
-                  <script> var pass = document.getElementById('lName').value; </script>
-                  </form>
+                  <script> var pass = document.getElementById('lName').value; </script></form>
+                  
                   <form action="/regPage" method="GET">
                     <input class="btn btn-lg btn-dark" type="submit" value="Register"></input>
                   </form>
