--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -123,6 +123,11 @@
                   <span class="error"><small id="emailError" style="color:red"></small></span>
                 </div>
                 <div class="form-group">
+                  <label for="username" class="h6">Username</label>
+                  <input name="username" type="text" class="form-control" id="username" placeholder="Username">
+                  <span class="error"><small id="usernameError" style="color:red"></small></span>
+                </div>
+                <div class="form-group">
                   <label for="pWord" class="h6">Password</label>
                   <input name="password" type="password" class="form-control" id="password" placeholder="Password">
                   <small id="passwordHelpBlock" class="form-text text-muted">
@@ -138,7 +143,7 @@
                 </div>
                 <br>
                 <div class="mt-3">
-                  <button id="submit_button" type="submit" class="btn btn-dark btn-block"  >Submit</button>
+                  <button id="submit_button" type="submit" class="btn btn-dark btn-block">Submit</button>
                 </div>
             </div>
           </div>
