--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -8,7 +8,7 @@
     		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script src="../../regPage.js"></script>
+        <script src="../../regPageJS.js"></script>
         <style>
           .topnav{
             background-color: #C7BA7C;
@@ -122,7 +122,7 @@
                   <input name="email" type="email" class="form-control" id="email" placeholder="example@school.edu">
                   <span class="error"><small id="emailError" style="color:red"></small></span>
                 </div>
-                
+
                 <div class="form-group">
                   <label for="pWord" class="h6">Password</label>
                   <input name="password" type="password" class="form-control" id="password" placeholder="Password">
