adding pronouns to regPage

--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -73,6 +73,18 @@
                   </div>
                 </div>
                 <div class="form-group">
+                  <label for="pronouns" class="h6">Preffered Prnouns</label>
+                  <select name="pronouns" class="form-control" id="pronouns">
+                    <option value="">Select Your Pronouns</option>
+                    <option value="he">he/him/his</option>
+                    <option value="she">she/her/hers</option>
+                    <option value="they">they/them/theirs</option>
+                    <option value="ze">ze/hir/hirs</option>
+                    <option value="no">Prefer not to say</option>
+                  </select>
+                  <span class="error"><small id="pronounsError" style="color:red"></small></span>
+                </div>
+                <div class="form-group">
                   <label for="validationSchool" class="h6">School</label>
                   <select name="school" class="form-control" id="schoolSelect">
                     <option value="">Select a School</option>
