fixing validation for regPage

--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -55,7 +55,7 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form action="/regPage/valid" method="POST" onsubmit="return(formDone());" name="regForm" id="regForm" >
+              <form action="/regPage/valid" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
