--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -94,12 +94,12 @@
                   <span class="error"><small id="schoolError" style="color:red"></small></span>
                 </div>
                 <p class="h6">Select Role</p>
-                <div class="form-check form-check-inline">
-                  <input name="studentStatus" class="form-check-input" type="checkbox" id="studentStatus" value="None" required>
+                <div class="form-check form-check-inline" required>
+                  <input name="studentStatus" class="form-check-input" type="checkbox" id="studentStatus" value="None">
                   <label class="form-check-label" for="student">Student</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input name="tutorStatus" class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus" required>
+                  <input name="tutorStatus" class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus">
                   <label class="form-check-label" for="tutorCheck">Tutor</label>
                 </div>
                 <span class="error"><small id="typeStatus" style="color:red"></small></span>
