--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -94,7 +94,7 @@
                   <span class="error"><small id="schoolError" style="color:red"></small></span>
                 </div>
                 <p class="h6">Select Role</p>
-                <div class="form-check form-check-inline" required>
+                <div class="form-check form-check-inline">
                   <input name="studentStatus" class="form-check-input" type="checkbox" id="studentStatus" value="None">
                   <label class="form-check-label" for="student">Student</label>
                 </div>
