--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -106,7 +106,7 @@
                 <div class="card card-body" style="display:none;" id="tutorCard">
                   <div class="form-group" id="tutorForm">
                     <label for="validationSchool" class="h6">What Year Are You?</label>
-                    <select name="yearStatus" class="form-control" id="yearStatus" required>
+                    <select name="yearStatus" class="form-control" id="yearStatus">
                       <option value="">Select a Year</option>
                       <option value="Freshman">Freshman</option>
                       <option value="Sophomore">Sophomore</option>
@@ -117,7 +117,7 @@
                   </div>
                   <div class="form-group">
                     <label for="validationSubject" class="h6">What Subject?</label>
-                    <select name="subjectStatus" class="form-control" id="subjectStatus" required>
+                    <select name="subjectStatus" class="form-control" id="subjectStatus">
                       <option value="">Select a Subject</option>
                       <option value="Math">Math</option>
                       <option value="Physics">Physics</option>
