--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -126,6 +126,10 @@
                     </select>
                     <span class="error"><small id="subjectError" style="color:red"></small></span>
                   </div>
+                  <div class="form-group">
+                    <label for="hourlyWage" class="h6">Enter Your Hourly Price</label>
+                    <input name="wage" class="form-control" id="wage" placeholder="$0.00" value="0">
+                  </div>
                 </div>
                 <br>
                 <br>
