--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -128,7 +128,7 @@
                   </div>
                   <div class="form-group">
                     <label for="hourlyWage" class="h6">Enter Your Hourly Price</label>
-                    <input name="wage" class="form-control" id="wage" placeholder="$0.00" value="0">
+                    <input name="wage" class="form-control" id="wage" placeholder="$0.00">
                   </div>
                 </div>
                 <br>
