--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -205,11 +205,13 @@
   <form action="/action_page.php" class="form-container">
     <h1>Chat</h1>
 
-    <label for="msg"><b>Message</b></label>
-    <textarea placeholder="Type message.." name="msg" required></textarea>
+    <label id="messages" for="msg"><b>Message</b></label>
+    <textarea id="textbox" placeholder="Type message.." name="msg" required></textarea>
 
-    <button type="submit" class="btn">Send</button>
+    <button id="button" type="submit" class="btn">Send</button>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+    <script src="server.js"></script>
+
   </form>
 </div>
 
@@ -220,4 +222,5 @@ function openForm() {
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
+</script>
 </script>
