Add user session functionality
Added user login session functionality to profile and login pages

--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -43,7 +43,7 @@
       <body style="background-color:#000000">
         <div class="topnav">
           <form action="/">
-            <input type="submit" name="home" value="Home"> 
+            <input type="submit" name="home" value="Home">
           </form>
           <a class="active"href="#about">About</a>
         </div>
@@ -65,7 +65,7 @@
                 <div class="col">
                   <div class="form-group">
                     <label for="validationLName" class="h6">Password</label>
-                    <input type ="password" class="form-control" id="lName" placeholder="Password" value= ''>
+                    <input name="verifyPwd" type ="password" class="form-control" id="lName" placeholder="Password" value= ''>
                     <span class="error"><small id="passError" style="color:red"></small></span>
                   </div>
                 </div>
