--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -43,7 +43,7 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav">
-          <form action="/">
+          <form action="/" method="GET">
             <input type="submit" name="home" value="Home"> 
           </form>
           <a class="active"href="#about">About</a>
