--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <style>
+          <!-- 
           .topnav{
             background-color: #C7BA7C;
             overflow:hidden;
@@ -56,8 +57,8 @@
               <form action="/login/verify" method="POST" name="regForm" id="regForm" >
                 <div class="col">
                   <div class="form-group">
-                    <label for="validationEmail" class="h6">Student Email</label>
-                    <input name="verifyEmail" type="input" class="form-control" id="email" placeholder="example@school.edu">
+                    <label for="validationUsername" class="h6">Username</label>
+                    <input name="verifyEmail" type="input" class="form-control" id="email" placeholder="Username">
                     <span class="error"><small id="emailError" style="color:red"></small></span>
                   </div>
                 </div>
