--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -160,7 +160,7 @@
               <div class="container-fluid">
                 <div class="row">
                   <div>
-                    <h3><%= users[0].firstname %> <%= users.lastname %></h3>
+                    <h3><%= users[0].firstname %> <%= users[0].lastname %></h3>
                     <h5><%= users[0].location %></h5>
                     <div class="card mx-auto" style="width: 33rem;">
                         <div class="card-body">
