--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -196,7 +196,7 @@
                               <div class="card mx-auto" style="width: 57rem;">
                                 <div class="card-body">
                                   <div class="feedback">
-                                    <p><%= feedback[i].reviewText %></p>
+                                    <p><%= feed[i].reviewText %></p>
                                   </div>
                                  </div> 
                                </div>
