--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -189,7 +189,7 @@
                   <div class="card-body">
                     <div class="myBox">
                       <h5>Other User Feedback:</h5>
-                      <% for(var i = 0; i < feedback.length; i++) { %>
+                      <% for(var i = 0; i < feed.length; i++) { %>
                         <div class="card-body">
                           <div class="row">
                             <div class="col-4">
