--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -189,14 +189,14 @@
                   <div class="card-body">
                     <div class="myBox">
                       <h5>Other User Feedback:</h5>
-                      <% for(var i = 0; i < feed.length; i++) { %>
+                      <% for(var i = 0; i < feedback.length; i++) { %>
                         <div class="card-body">
                           <div class="row">
                             <div class="col-4">
                               <div class="card mx-auto" style="width: 57rem;">
                                 <div class="card-body">
                                   <div class="feedback">
-                                    <p><%= feed[i].reviewText %></p>
+                                    <p><%= feedback[i].reviewText %></p>
                                   </div>
                                  </div> 
                                </div>
